public class Parking extends Field{
    public Parking(int id, String label, int cost, int income) {
        super(id, label, cost, income);
    }
}
