public class Prison extends Field {
    public Prison(int id, String label, int cost, int income) {
        super(id, label, cost, income);
    }
}
