public class Visit extends Field {
    public Visit(int id, String label, int cost, int income) {
        super(id, label, cost, income);
    }
}
